--- a/style.css
+++ b/style.css
@@ -1,115 +1,86 @@
-* {
-    padding : 0;
-    margin : 0;
+
+html {
+  height: 100%;
 }
 
 body {
-    background : white;
-    color : black;
-}
-* {
-    padding : 0;
-    margin : 0;
-}
-
-body {
-    background : white;
-    color : black;
+  height: 100%;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  background-color: #3a3a3a;
 }
 
-.login-box
-{
-		width: 500px;
-		height: 500px;
-		background-color: white;
-		border-radius: 5px;
-		border: 1px solid green;
-		margin-top: 70px;
-		
-	}
-	
-	.input-login{
-	
-	width: 90%;
-	margin-left: 10px;
-	padding: 10px;
-	border-radius: 5px;
-	border: 1px solid green;
-	
-	}
-	
-	h2{
-		text-align: center;
-		color: blue;
-		margin-top: 20px;
-	
-	}
+#main-holder {
+  width: 50%;
+  height: 70%;
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  background-color: white;
+  border-radius: 7px;
+  box-shadow: 0px 0px 5px 2px black;
+}
 
-.login{
-	background-color: white;
-	padding: 10px 30px;
-	font-size: 1.4rem;
-	color: black;
-	}
+#login-error-msg-holder {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  justify-items: center;
+  align-items: center;
+}
 
-	.btn{
-		text-align: center;
-		}
-	
-	.balance {
-	  width: 400px;
-	  height: 200px;
-	  background-color: blue;
-	  color: white;
-	  margin: 0 auto;
-	  
-		}
-	
-	h1{
-		font-size: 3.3 rem;
-		color: white;
-		text-align : center;
-		padding: 10px;
-		margin-top: 
-	
-	}
-	
-	.left-div {
-		width: 40%;
-		float: left;
-	  background-color: blue;
-	  margin: 0 auto;
-	  height: 200px;
-	  margin-top: 100px;
-	  margin-right: 40px;
-	  margin-left: 100px;
-	}
-	
-	.deposit {
-	 width: 90%;
-	 padding : 15px;
-	 border: 1px solid black;
-	 margin-left: 10px;
-	}
-	
-	.add{
-	background-color: brown;
-	padding : 10px 40px;
-	color: black;
-	margin-top: 20px;
-	font-size: 1.4rem;
-	font-weight: 400;
-	
-	}
-	
-	.addbtn{
-		text-align: center;
-	
-	
-	}
-	
-	}
-	
+#login-error-msg {
+  width: 23%;
+  text-align: center;
+  margin: 0;
+  padding: 5px;
+  font-size: 12px;
+  font-weight: bold;
+  color: #8a0000;
+  border: 1px solid #8a0000;
+  background-color: #e58f8f;
+  opacity: 0;
+}
+
+#error-msg-second-line {
+  display: block;
+}
+
+#login-form {
+  align-self: flex-start;
+  display: grid;
+  justify-items: center;
+  align-items: center;
+}
+
+.login-form-field::placeholder {
+  color: #3a3a3a;
+}
+
+.login-form-field {
+  border: none;
+  border-bottom: 1px solid #3a3a3a;
+  margin-bottom: 10px;
+  border-radius: 3px;
+  outline: none;
+  padding: 0px 0px 5px 5px;
+}
+
+#login-form-submit {
+  width: 100%;
+  padding: 7px;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  font-weight: bold;
+  background-color: #3a3a3a;
+  cursor: pointer;
+  outline: none;
+}
+
 
 
 
